[package]
name = "soroban-sdk"
description = "Soroban SDK."
homepage = "https://github.com/stellar/rs-soroban-sdk"
repository = "https://github.com/stellar/rs-soroban-sdk"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "README.md"
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version = "1.67"

[lib]
doctest = false

[dependencies]
soroban-sdk-macros = { workspace = true }
bytes-lit = "0.0.4"

[target.'cfg(target_family="wasm")'.dependencies]
soroban-env-guest = { workspace = true }

[target.'cfg(not(target_family="wasm"))'.dependencies]
soroban-env-common = { workspace = true }

[dev-dependencies]
soroban-env-common = { workspace = true }
soroban-env-host = { workspace = true, features = [] }
stellar-xdr = { workspace = true, features = ["next", "std"] }
soroban-spec = { workspace = true }
ed25519-dalek = "1.0.1"
rand = "0.8.5"
hex = "0.4.3"

[features]
default = ["verification"]
alloc = []
# testutils = ["soroban-env-host/testutils", "dep:ed25519-dalek"]
testutils = []
docs = []
verification = []

[package.metadata.docs.rs]
all-features = true
